# books-search

./: .gitignore  README.md
data-processing/: .gitignore  README.md  clean_data.ipynb  embed_data.py  requirements.txt
recommender/: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
recommender-fe/: .env.example  README.md  package-lock.json  package.json
recommender-fe/src/app/: page.tsx  types.ts
recommender-fe/src/app/api/search/: route.ts
recommender-fe/src/components/: BookCard.tsx  ResultsPanel.tsx  SearchForm.tsx
recommender/app/: crud.py  main.py  schemas.py
recommender/db/: create_tables.py  db_config.py  insert_data.py  models.py
