[project]
name = "recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "dotenv>=0.9.9",
    "fastapi==0.115.12",
    "idna==3.10",
    "numpy==2.2.4",
    "ollama>=0.4.7",
    "pgvector==0.4.0",
    "psycopg2==2.9.10",
    "pydantic==2.11.1",
    "pydantic-core==2.33.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.46.1",
    "typing-extensions==4.13.0",
    "typing-inspection==0.4.0",
    "uvicorn>=0.34.0",
]
